@@ -287,8 +287,20 @@ char *EXPORT_FUNC(grub_xasprintf) (const char *fmt, ...)
 char *EXPORT_FUNC(grub_xvasprintf) (const char *fmt, va_list args) __attribute__ ((warn_unused_result));
 void EXPORT_FUNC(grub_exit) (void) __attribute__ ((noreturn));
 void EXPORT_FUNC(grub_abort) (void) __attribute__ ((noreturn));
-grub_uint64_t EXPORT_FUNC(grub_divmod64) (grub_uint64_t n,
-					  grub_uint32_t d, grub_uint32_t *r);
+grub_uint64_t EXPORT_FUNC(grub_divmod64_full) (grub_uint64_t n,
+					       grub_uint64_t d,
+					       grub_uint64_t *r);
+static inline grub_uint64_t grub_divmod64 (grub_uint64_t n,
+					   grub_uint32_t d,
+					   grub_uint32_t *r)
+{
+  grub_uint64_t ret, rr;
+  
+  ret = grub_divmod64_full (n, d, &rr);
+  if (r)
+    *r = rr;
+  return ret;
+}
 
 #if NEED_ENABLE_EXECUTE_STACK && !defined(GRUB_UTIL)
 void EXPORT_FUNC(__enable_execute_stack) (void *addr);
